# storage/api-docs/api-docs.json
@@ -106,7 +106,7 @@
                 "summary": "Сохранить категорию",
                 "operationId": "de40ad04180a48262a05cf249f785ab3",
                 "requestBody": {
-                    "description": "name - название категории, sub_categories - массив существующих id категорий, например: sub_categories: [1,2,3,4,5]",
+                    "description": "name - название категории, sub_categories - массив id категорий, например: sub_categories: [1,2,3,4,5]",
                     "content": {
                         "application/json": {
                             "schema": {
@@ -297,6 +297,69 @@
                     }
                 ]
             },
+            "post": {
+                "tags": [
+                    "Продукты"
+                ],
+                "summary": "Обновить продукт",
+                "operationId": "ec9176d0ba73362b0d0451d9d952f730",
+                "parameters": [
+                    {
+                        "name": "id",
+                        "in": "path",
+                        "description": "id продукта"
+                    }
+                ],
+                "requestBody": {
+                    "content": {
+                        "multipart/form-data": {
+                            "schema": {
+                                "properties": {
+                                    "category_id": {
+                                        "description": "id категории",
+                                        "type": "number",
+                                        "default": 1
+                                    },
+                                    "name": {
+                                        "description": "название продукта",
+                                        "type": "string",
+                                        "default": "Аксессуары"
+                                    },
+                                    "description": {
+                                        "description": "описание",
+                                        "type": "string",
+                                        "default": "Описание продукта"
+                                    },
+                                    "image": {
+                                        "description": "изображение",
+                                        "type": "file"
+                                    },
+                                    "price": {
+                                        "description": "цена",
+                                        "type": "number",
+                                        "default": 100000
+                                    },
+                                    "available": {
+                                        "description": "в наличии",
+                                        "type": "boolean"
+                                    }
+                                },
+                                "type": "object"
+                            }
+                        }
+                    }
+                },
+                "responses": {
+                    "200": {
+                        "description": "Ресурс обновлен"
+                    }
+                },
+                "security": [
+                    {
+                        "sanctum": []
+                    }
+                ]
+            },
             "delete": {
                 "tags": [
                     "Продукты"
@@ -313,30 +376,6 @@
                 "responses": {
                     "200": {
                         "description": "Ресурс удалён"
-                    }
-                },
-                "security": [
-                    {
-                        "sanctum": []
-                    }
-                ]
-            },
-            "patch": {
-                "tags": [
-                    "Продукты"
-                ],
-                "summary": "Обновить продукт",
-                "operationId": "506c53398f4bb15875c04e363a1e9d95",
-                "parameters": [
-                    {
-                        "name": "id",
-                        "in": "path",
-                        "description": "id продукта"
-                    }
-                ],
-                "responses": {
-                    "200": {
-                        "description": "Ресурс обновлен"
                     }
                 },
                 "security": [
